infrastructure/crowdsec/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: crowdsec
  labels:
    app.kubernetes.io/name: crowdsec
  annotations:
    kustomize.toolkit.fluxcd.io/prune: disabled
