infrastructure/crowdsec/deployment-unifi-bouncer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cs-unifi-bouncer
  namespace: crowdsec
  labels:
    app: unifi-bouncer
spec:
  replicas: 0
  selector:
    matchLabels:
      app: unifi-bouncer
  template:
    metadata:
      labels:
        app: unifi-bouncer
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: cs-unifi-bouncer
          image: ghcr.io/teifun2/cs-unifi-bouncer:v1.4.0
          securityContext:
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 100m
              memory: 128Mi
